<resources>
    <string name="app_name">Workout Calendar</string>
    <string name="custom_workout_activity_name">Custom Workout</string>
    <string name="timer_activity_name">Timer</string>
    <string name="presets_activity_name">Presets</string>
    <string name="help_activity_name">Help</string>
    <string name="settings_activity_name">Settings</string>

    <string name="splash_description">Keeping track of your workouts\nhas never been easier.</string>
    <string name="get_started">Get Started</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="use_local_storage">Use Local Storage</string>
    <string name="splash_welcome">Welcome</string>

    <string name="running">Record distance?</string>

    <string name="help_header_home_page">Home Page</string>
    <string name="help_header_custom_workout">Custom Workouts</string>
    <string name="help_header_presets">Preset Workouts</string>
    <string name="help_header_timer">Timed Workouts</string>

    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="finish">Finish</string>
    <string name="accept">Accept</string>
    <string name="home">Home</string>
    <string name="temporary_date">Temporary Date</string>
    <string name="temporary_day">Temporary Day</string>
    <string name="return_to_today">Return To Today</string>
    <string name="month_spinner">Month Spinner</string>

    <string name="set_preset_workout">Add Preset Workout</string>
    <string name="empty"> </string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="select_date">Select a date</string>
    <string name="cancel">Cancel</string>
    <string name="location_hint">Location</string>
    <string name="date_hint">Date</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="lift_hint">Lift</string>
    <string name="jump_to_today">Jump To Today</string>
    <string name="change">Change</string>



    <string name="load_from_presets">Load From Presets</string>
    <string name="save_to_presets">Save To Presets</string>



    <string name="frequency">Frequency</string>
    <string name="expires">Expires</string>



    <string name="left">Left</string>
    <string name="right">Right</string>



    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>



    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>
</resources>
