<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_presets_inner_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="24sp"
            android:text="@string/title_hint"/>

        <TextView
            android:id="@+id/txt_presets_inner_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="24sp"
            android:text="@string/location_hint"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_presets_inner_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="20sp"
        android:text="@string/description_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_presets_inner_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="20sp"
            android:text="@string/frequency"/>

        <TextView
            android:id="@+id/txt_presets_inner_expires"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="20sp"
            android:text="@string/expires"/>
    </LinearLayout>


</LinearLayout>