<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <EditText
        android:id="@+id/presets_dialog_inner_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:hint="@string/title_hint"/>

    <EditText
        android:id="@+id/presets_dialog_inner_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:hint="@string/location_hint"/>

    <EditText
        android:id="@+id/presets_dialog_inner_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine|textCapSentences"
        android:hint="@string/description_hint"/>

</LinearLayout>