<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/help_header_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/help_header_home_page"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/help_sub_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/help_header_custom_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/help_header_custom_workout"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/help_sub_custom_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/help_header_preset_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/help_header_presets"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/help_sub_preset_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/help_header_timed_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/help_header_timer"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/help_sub_timed_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="20sp"/>

    </LinearLayout>

</ScrollView>