<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/custom_workout_btn_load_from_presets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/load_from_presets"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/accent"/>

        <Button
            android:id="@+id/custom_workout_btn_save_to_presets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_to_presets"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/accent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <ImageView
            android:id="@+id/title_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:alpha="0.5"
            android:clickable="false"
            android:src="@mipmap/ic_label_black_24dp" />

        <AutoCompleteTextView
            android:id="@+id/workout_title_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/title_hint"
            android:maxLines="1"
            android:inputType="textCapWords"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <ImageView
            android:id="@+id/location_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:alpha="0.5"
            android:clickable="false"
            android:src="@mipmap/ic_place_black_24dp" />

        <AutoCompleteTextView
            android:id="@+id/workout_location_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/location_hint"
            android:maxLines="1"
            android:inputType="textCapWords"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <AutoCompleteTextView
            android:id="@+id/custom_workout_exercise_actv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:maxLines="1"
            android:inputType="textCapSentences"
            android:layout_weight="1"
            android:hint="@string/lift_hint"/>

        <EditText
            android:id="@+id/custom_workout_lbs_edit_text"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/custom_workout_lbs_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="lbs,"
            android:gravity="bottom"/>

        <EditText
            android:id="@+id/custom_workout_sets_edit_text"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/custom_workout_sets_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="sets"
            android:gravity="bottom"/>

        <EditText
            android:id="@+id/custom_workout_reps_edit_text"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/custom_workout_reps_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="reps"
            android:gravity="bottom"
            />

        <ImageButton
            android:id="@+id/custom_workout_add_exercise_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_add_black_24dp"
            android:alpha="0.5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp">
        <ImageView
            android:id="@+id/description_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:alpha="0.5"
            android:clickable="false"
            android:src="@mipmap/ic_description_black_24dp" />

        <EditText
            android:id="@+id/workout_description_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/description_hint"
            android:inputType="textMultiLine|textCapSentences"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:minHeight="48dp">
        <ImageButton
            android:id="@+id/custom_workout_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_cancel_black_24dp"
            android:alpha="0.5"
            android:background="@drawable/ripple"/>

        <ImageButton
            android:id="@+id/custom_workout_change_image"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_image_black_24dp"
            android:alpha="0.5"
            android:background="@drawable/ripple"/>

        <ImageButton
            android:id="@+id/custom_workout_change_date"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_today_black_24dp"
            android:alpha="0.5"
            android:background="@drawable/ripple"/>

        <ImageButton
            android:id="@+id/custom_workout_save"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_done_black_24dp"
            android:alpha="0.5"
            android:background="@drawable/ripple"/>
    </LinearLayout>

</LinearLayout>