<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="30dp">

        <Chronometer
            android:id="@+id/timer_chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:textColor="@color/accent"
            android:background="@drawable/circle"
            android:gravity="center"
            android:textColorHighlight="@color/primary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <CheckBox
            android:id="@+id/timer_check_box_record_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/running"
            android:textSize="24sp"
            android:textColor="@color/accent"/>

        <EditText
            android:id="@+id/timer_et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_margin="8dp"
            android:hint="@string/title_hint"
            android:inputType="textCapSentences"/>

        <EditText
            android:id="@+id/timer_et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_margin="8dp"
            android:hint="@string/description_hint"
            android:inputType="textCapWords"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:minHeight="48dp">

        <ImageButton
            android:id="@+id/timer_btn_reset_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_refresh_black_24dp"
            android:background="@drawable/ripple"
            android:layout_weight="1"
            android:alpha="0.5"/>

        <ImageButton
            android:id="@+id/timer_btn_change_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_image_black_24dp"
            android:background="@drawable/ripple"
            android:layout_weight="1"
            android:alpha="0.5"/>

        <ImageButton
            android:id="@+id/timer_btn_change_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_today_black_24dp"
            android:background="@drawable/ripple"
            android:layout_weight="1"
            android:alpha="0.5"/>

        <ImageButton
            android:id="@+id/timer_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_done_black_24dp"
            android:background="@drawable/ripple"
            android:layout_weight="1"
            android:alpha="0.5"/>

    </LinearLayout>

</LinearLayout>